# isbn_9784297133221

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
chapter/: Cargo.toml
chapter/src/: arithmetic.rs  assign.rs  basic_function.rs  border.rs  branch_if.rs  branch_match.rs  comparison.rs  constant.rs  csv_reader.rs  customer.rs  enum_basic.rs  floating_type.rs  function_type.rs  generic_season_type.rs  hash_map_type.rs  json_reader.rs  life_time.rs  main.rs  member.rs  name_field_type.rs  pointer_type.rs  reader_main.rs  reference.rs  result_type.rs  shape_type.rs  static_val.rs  str_type.rs  string_type.rs  trait_basic.rs  tuple_season.rs  variables.rs
chapter1/: Cargo.toml
chapter1/src/: arithmetrics.rs  array_type.rs  bit.rs  boolean_type.rs  box_type.rs  character_type.rs  closure.rs  constant_type.rs  customer.rs  datetime_type.rs  generic.rs  generics.rs  hash_set_type.rs  integer_type.rs  linked_list_type.rs  main.rs  option_type.rs  ownership.rs  repeat_for.rs  repeat_loop.rs  repeat_while.rs  scope.rs  slice_type.rs  str_type.rs  tuple_type.rs  tuple_unit_type.rs  vec_type.rs
generics/: Cargo.toml
generics/src/: entities.rs  trait_impl.rs
