[package]
name = "chapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.3"
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
